--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -13,8 +13,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=(localdb)\mssqllocaldb;integrated security=SSPI;attachdbfilename=|DataDirectory|\aspnetdb.mdf" providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=RD_LAPTOP;Initial Catalog=KSData;Integrated Security=True;connect timeout=120" providerName="System.Data.SqlClient" />
     <add name="NWindConnectionString" connectionString="data source=(localdb)\mssqllocaldb;attachdbfilename=|DataDirectory|\NWind.mdf;integrated security=True;connect timeout=120" providerName="System.Data.SqlClient" />
+    <add name="KSDataContext" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
