--- a/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
+++ b/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
@@ -389,6 +389,9 @@
     <Content Include="Views\UsersAdmin\_addUser.cshtml" />
     <Content Include="Views\UsersAdmin\Index.cshtml" />
     <Content Include="Views\UsersAdmin\UserGridPartialView.cshtml" />
+    <Content Include="Views\UsersAdmin\AddNewUserPartial.cshtml" />
+    <Content Include="Views\UsersAdmin\UpdateUserPartial.cshtml" />
+    <Content Include="Views\UsersAdmin\DeleteUserPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
