CSS Changes - working on responsiveness

--- a/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
+++ b/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
@@ -395,6 +395,7 @@
     <Content Include="Views\UsersAdmin\UpdateUser.cshtml" />
     <Content Include="Views\ManageUsers\Index.cshtml" />
     <Content Include="Views\ManageUsers\_GridViewPartial.cshtml" />
+    <Content Include="Views\Shared\_menuPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
