--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
+﻿<?xml version="1.0" ?><!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
@@ -12,14 +11,14 @@
       <section name="errors" type="DevExpress.Web.ErrorsConfigurationSection, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
       <section name="resources" type="DevExpress.Web.ResourcesConfigurationSection, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
     </sectionGroup>
-  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
+  </configSections>
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True;connect timeout=120" providerName="System.Data.SqlClient"/>-->
     <!--<add name="ApplicationServices" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="NWindConnectionString" connectionString="data source=(localdb)\mssqllocaldb;attachdbfilename=|DataDirectory|\NWind.mdf;integrated security=True;connect timeout=120" providerName="System.Data.SqlClient"/>-->
-    <!--<add name="KSDataConnection" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="KSDataConnection" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>-->
-    <add name="KSDataConnection" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security = true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="KSDataContext" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="KSDataContext" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>-->
+    <add name="KSDataContext" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security = true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -121,11 +120,10 @@
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DXXRD.axd" validate="false" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DXXRDV.axd" validate="false" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DXQB.axd" validate="false" />
-    <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" /></httpHandlers>
-    <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
+    </httpHandlers>
+    <httpModules>
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
-    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" /></httpModules>
+    </httpModules>
     <globalization culture="" uiCulture="" />
     <httpRuntime maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" targetFramework="4.5" />
   </system.web>
@@ -134,14 +132,14 @@
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
-    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
+    </modules>
     <handlers>
       <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" name="ASPxUploadProgressHandler" preCondition="integratedMode" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET" path="DX.ashx" name="ASPxHttpHandlerModule" preCondition="integratedMode" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DXXRD.axd" name="ASPxReportDesignerHandlerModule" preCondition="integratedMode" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DXXRDV.axd" name="ASPxWebDocumentViewerHandlerModule" preCondition="integratedMode" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DXQB.axd" name="ASPxQueryBuilderDesignerHandlerModule" preCondition="integratedMode" />
-    <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers>
+    </handlers>
     <security>
       <requestFiltering>
         <requestLimits maxAllowedContentLength="30000000" />
@@ -156,7 +154,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
@@ -190,9 +188,4 @@
     <settings accessibilityCompliant="false" bootstrapMode="" doctypeMode="Html5" rightToLeft="false" checkReferencesToExternalScripts="true" protectControlState="true" ieCompatibilityVersion="edge" />
     <errors callbackErrorRedirectUrl="" />
   </devExpress>
-<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-      <!-- 
-          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
-          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
-      -->
-    </glimpse></configuration>
+</configuration>
