--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -17,9 +17,9 @@
     <!--<add name="ApplicationServices" connectionString="data source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True;connect timeout=120" providerName="System.Data.SqlClient"/>-->
     <!--<add name="ApplicationServices" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="NWindConnectionString" connectionString="data source=(localdb)\mssqllocaldb;attachdbfilename=|DataDirectory|\NWind.mdf;integrated security=True;connect timeout=120" providerName="System.Data.SqlClient"/>-->
-    <add name="KSDataConnection" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="KSDataConnection" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="KSDataConnection" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>-->
-    <!--<add name="KSDataConnection" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security = true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="KSDataConnection" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security = true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
